--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mindofmicah/modules",
+    "name": "mindofmicah/backbone-module-command",
     "description": "",
     "authors": [
         {
