--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "illuminate/filesystem": "4.2.*"
+        "illuminate/filesystem": "4.2.*",
+        "mustache/mustache" : "*"
     },
     "require-dev" : {
         "phpspec/phpspec" : "2.*",
-        "codeception/codeception" : "2.*", 
-        "mustache/mustache" : "*"
+        "codeception/codeception" : "2.*"
     },
     "autoload": {
         "psr-4": {
