--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
         "illuminate/filesystem": "4.2.*",
-        "mustache/mustache" : "*"
+        "mustache/mustache" : "2.*"
     },
     "require-dev" : {
         "phpspec/phpspec" : "2.*",
